--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.9.30
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  audio_service: ^0.18.7
 
 dev_dependencies:
   flutter_test:
