--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audio_service: ^0.18.7
+  audio_video_progress_bar: ^0.11.0
+  rxdart: ^0.27.6
+  mailto: ^2.0.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
