--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.2.1
   on_audio_query: ^2.6.1
-  permission_handler: ^10.2.0
+  permission_handler: ^9.2.0
   just_audio: ^0.9.30
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -47,6 +47,11 @@ dependencies:
   rxdart: ^0.27.6
   mailto: ^2.0.0
   url_launcher: ^6.1.6
+  acr_cloud_sdk: ^2.0.1
+  avatar_glow: ^2.0.2
+  dio: ^4.0.6
+  shared_preferences: ^2.0.15
+  just_audio_background: ^0.0.1-beta.8
 
 dev_dependencies:
   flutter_test:
