--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -52,6 +52,9 @@ dependencies:
   shared_preferences: ^2.0.15
   just_audio_background: ^0.0.1-beta.8
   permission_handler: ^9.2.0
+  flutter_bloc: ^8.1.1
+  bloc: ^8.1.0
+  package_info_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
